--- a/src/App.css
+++ b/src/App.css
@@ -84,11 +84,12 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 1em;
-  padding: 1em;
+  padding: 1em 0;
   min-height: 120px;
   background-color: var(--white);
   color: var(--very-dark-gray);
   width: 80%;
+  max-width: 1040px;
   border-radius: 20px;
 }
 
@@ -97,6 +98,7 @@
   padding: 0 3em 2em 1em;
   font-size: 18px;
   max-width: 190px;
+  height: 60px;
   text-align: left;
 }
 
@@ -105,13 +107,14 @@
   font-weight: 500;
   text-align: left;
   color: var(--gray);
+  margin-bottom: .7em;
 }
 
 .stats-item span {
   font-size: 25px;
   font-weight: 700;
   text-align: left;
-  /* padding-top: 1em; */
+  /* margin-top: 5em; */
   color: var(--very-dark-gray);
 }
 
@@ -120,7 +123,7 @@
 .stats-item:nth-child(4) p::before {
   content: "";
   width: 1px;
-  height: 80%;
+  height: 70%;
   background-color: var(--gray);
   position: absolute;
   left: 0;
