--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@
 
 .search {
   height: 50px;
-  width: 550px;
-  background-color: red;
+  width: 80%;
+  max-width: 550px;
   border-radius: 10px;
   overflow: hidden;
   display: flex;
@@ -114,7 +114,6 @@
   font-size: 25px;
   font-weight: 700;
   text-align: left;
-  /* margin-top: 5em; */
   color: var(--very-dark-gray);
 }
 
@@ -129,4 +128,60 @@
   left: 0;
   top: 10%;
   transform: translate(-50% -50%);
+}
+
+@media only screen and (max-width: 655px){
+  .header {
+    background-image: url('/pattern-bg-mobile.png');
+    height: 280px;
+  }
+
+  .header h1 {
+    margin-top: 1rem;
+    font-size: 28px;
+  }
+
+  .stats-sec {
+    top: 9em;
+  }
+  
+  .stats {
+    display: flex;
+    flex-direction: column;
+    height: max-content;
+  }
+
+  .stats-item {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0;
+    height: max-content;
+    width: 100%;
+    min-width: 270px;
+    text-align: center;
+    gap: 0;
+  }
+
+  .stats-item p {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+  }
+
+  .stats-item span {
+    min-width: 270px;
+    text-align: center;
+    width: max-content;
+    font-size: 24px;
+  }
+
+  .stats-item:nth-child(2) p::before,
+  .stats-item:nth-child(3) p::before,
+  .stats-item:nth-child(4) p::before {
+    content: none;
+  }
 }
