--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 }
 
 .header {
-  height: 200px;
+  height: 33.3%;
   background-image: url('/pattern-bg-desktop.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -77,6 +77,7 @@
   justify-content: center;
   position: absolute;
   top: 8.5em;
+  z-index: 10;
 }
 
 .stats {
@@ -131,10 +132,16 @@
   transform: translate(-50% -50%);
 }
 
+.map {
+  width: 100%;
+  height: 66.7%;
+  z-index: 1;
+}
+
 @media only screen and (max-width: 655px){
   .header {
     background-image: url('/pattern-bg-mobile.png');
-    height: 280px;
+    height: 40%;
   }
 
   .header h1 {
@@ -184,5 +191,9 @@
   .stats-item:nth-child(3) p::before,
   .stats-item:nth-child(4) p::before {
     content: none;
+  }
+
+  .map {
+    height: 60%;
   }
 }
