--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,10 @@
   z-index: 1;
 }
 
+.loading {
+  font-size: 10px;
+}
+
 @media only screen and (max-width: 655px){
   .header {
     background-image: url('/pattern-bg-mobile.png');
