--- a/src/App.css
+++ b/src/App.css
@@ -77,16 +77,13 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 8.5em;
-  z-index: 10;
+  top: 70%;
 }
 
 .stats {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 1em;
   padding: .1em 0;
   min-height: 120px;
   background-color: var(--white);
@@ -94,13 +91,17 @@
   width: 80%;
   max-width: 1040px;
   border-radius: 20px;
+  z-index: 10;
+  gap: 2.5%;
 }
 
 .stats-item {
   position: relative;
-  padding: 0 3em 2em 1em;
+  padding: 1em 1em;
+  padding-top: 0;
   font-size: 18px;
-  max-width: 190px;
+  width: 25%;
+  max-width: 150px;
   height: 50px;
   text-align: left;
 }
@@ -114,7 +115,7 @@
 }
 
 .stats-item span {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 700;
   text-align: left;
   color: var(--very-dark-gray);
